--- a/css/style.css
+++ b/css/style.css
@@ -1,49 +1,15 @@
-body, html {
-  margin: 0;
-  padding: 0;
-  display: flex;
-  font-family: arial;
+body {
+  background-color: #E8E6DA;
 }
 
-#options {
-  width: 300px;
-  position: absolute;
-  top: 0px;
-  left: 20px;
-  color: #fff;
-  text-align: left;
-}
-
-h1 {
-  font-size: 26px;
-}
-
-p {
-  font-size: 18px;
-  line-height: 14px;
-}
-
-span {
-  border-bottom: 1px dotted #fff;
-}
-
-#staakLogo {
-  width: 4vw;
-  max-width: 100px;
-  min-width: 80px;
-  position: absolute;
-  bottom: 10px;
-  left: 10px;
-  z-index: 20;
-  padding: 10px;
-}
-
-#staakLogo svg {
-  width: 100%;
+.svg {
   display: block;
+  margin: 0 auto;
+  margin-top: -20px;
 }
-#staakLogo svg path {
-  fill: #ffffff;
-  -webkit-transition: fill 0.25s ease-in-out;
-  transition: fill 0.25s ease-in-out;
+.blend {
+  mix-blend-mode: multiply;
+}
+.isolate {
+  isolation: isolate;
 }
