--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,36 @@
 body {
-  background-color: #E8E6DA;
-}
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      /*width: 100%;*/
+      /*height: 100vh;*/
+    }
 
-.svg {
-  display: block;
-  margin: 0 auto;
-  margin-top: -20px;
-}
-.blend {
-  mix-blend-mode: multiply;
-}
-.isolate {
-  isolation: isolate;
-}
+    .wrapper {
+      position: relative;
+      display: flex;
+      align-items: center;
+      flex-wrap: wrap;
+      width: 1px;
+      height: 100vh;
+    }
+
+    .el {
+      position: absolute;
+      opacity: 1;
+      width: 2px;
+      height: 10vh;
+      margin-top: -12vh;
+      transform-origin: 50% 100%;
+      background: white;
+    }
+    .text{
+      position: absolute;
+      top: 10%;
+      font-size: x-large;
+      color: steelblue;
+    }
+    .paragraph{
+      position: absolute;
+      top: 65%;
+    }
